# libfuoten

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  Doxyfile  DoxygenLayout.xml  LICENSE  README.md  fuoten.pc.in  libfuoten.pro  releasel10n.sh  updatel10n.sh
.github/workflows/: codeqlqt6.yml  test.yml
.obs/: workflows.yml
.reuse/: dep5
.tx/: config
Fuoten/: Article  BaseItem  CMakeLists.txt  Error  Feed  Folder  FuotenEnums  article.cpp  article.h  article_p.h  baseitem.cpp  baseitem.h  baseitem_p.h  error.cpp  error.h  error_p.h  feed.cpp  feed.h  feed_p.h  folder.cpp  folder.h  folder_p.h  fuoten.cpp  fuoten.h  fuoten_global.h
Fuoten/API/: CMakeLists.txt  Component  ConvertToAppPassword  CreateFeed  CreateFolder  DeleteAppPassword  DeleteFeed  DeleteFolder  GetFeeds  GetFolders  GetItems  GetServerStatus  GetStatus  GetUpdatedItems  GetUser  GetVersion  GetWipeStatus  LoginFlowV2  MarkAllItemsRead  MarkFeedRead  MarkFolderRead  MarkItem  MarkMultipleItems  MoveFeed  PostWipeSuccess  RenameFeed  RenameFolder  StarItem  StarMultipleItems  component.cpp  component.h  component_p.h  converttoapppassword.cpp  converttoapppassword.h  converttoapppassword_p.h  createfeed.cpp  createfeed.h  createfeed_p.h  createfolder.cpp  createfolder.h  (+73 more)
Fuoten/Helpers/: AbstractConfiguration  AbstractNamFactory  AbstractNotificator  AccountValidator  CMakeLists.txt  Synchronizer  VersionNumber  WipeManager  abstractconfiguration.cpp  abstractconfiguration.h  abstractnamfactory.cpp  abstractnamfactory.h  abstractnotificator.cpp  abstractnotificator.h  abstractnotificator_p.h  accountvalidator.cpp  accountvalidator.h  accountvalidator_p.h  synchronizer.cpp  synchronizer.h  synchronizer_p.h  versionnumber.cpp  versionnumber.h  wipemanager.cpp  wipemanager.h  wipemanager_p.h
Fuoten/Models/: AbstractArticleModel  AbstractFeedModel  AbstractFolderModel  ArticleListFilterModel  ArticleListModel  BaseFilterModel  BaseModel  CMakeLists.txt  FeedListFilterModel  FeedListModel  FolderListFilterModel  FolderListModel  abstractarticlemodel.cpp  abstractarticlemodel.h  abstractarticlemodel_p.h  abstractfeedmodel.cpp  abstractfeedmodel.h  abstractfeedmodel_p.h  abstractfoldermodel.cpp  abstractfoldermodel.h  abstractfoldermodel_p.h  articlelistfiltermodel.cpp  articlelistfiltermodel.h  articlelistfiltermodel_p.h  articlelistmodel.cpp  articlelistmodel.h  articlelistmodel_p.h  basefiltermodel.cpp  basefiltermodel.h  basefiltermodel_p.h  basemodel.cpp  basemodel.h  basemodel_p.h  feedlistfiltermodel.cpp  feedlistfiltermodel.h  feedlistfiltermodel_p.h  feedlistmodel.cpp  feedlistmodel.h  feedlistmodel_p.h  folderlistfiltermodel.cpp  (+5 more)
Fuoten/Storage/: AbstractStorage  CMakeLists.txt  SQLiteStorage  abstractstorage.cpp  abstractstorage.h  abstractstorage_p.h  sqlitestorage.cpp  sqlitestorage.h  sqlitestorage_p.h
cmake/modules/: fuoten-config-version.cmake.in  fuoten-config.cmake.in
dox/: DoxygenLayout.xml
scripts/: Doxyfile.in  makeRelease.sh  releasel10n.sh  updatel10n.sh
src/: baseitem.cpp  baseitem.h  baseitem_p.h  component.cpp  component.h  component_p.h  error.cpp  error.h  error_p.h  feed.cpp  feed.h  feed_p.h  folder.cpp  folder.h  folder_p.h  folderitem.cpp  folderitem.h  folderitem_p.h  fuoten.h  fuoten_global.h
src/API/: component.cpp  component.h  component_p.h  createfolder.h  createfolder_p.h  deletefolder.cpp  deletefolder.h  deletefolder_p.h  getfolders.cpp  getfolders.h  getstatus.h  getstatus_p.h  getuser.cpp  getuser.h  getversion.cpp  getversion.h  markfolderread.cpp  markfolderread.h  renamefolder.cpp  renamefolder.h  renamefolder_p.h
src/Folders/: getfolders.cpp  getfolders.h  getfolders_p.h
src/Generic/: accountvalidator.cpp  accountvalidator.h  accountvalidator_p.h  status.cpp  status.h  status_p.h  user.cpp  user.h  user_p.h  version.cpp  version.h  version_p.h
src/Helpers/: abstractconfiguration.h  accountvalidator.cpp  accountvalidator.h  accountvalidator_p.h  configuration.cpp  configuration.h  newsappversion.cpp  newsappversion.h  storagehandler.cpp  storagehandler.h  synchronizer.cpp  synchronizer.h  synchronizer_p.h  versionnumber.cpp  versionnumber.h
src/Models/: abstractfoldermodel.cpp  abstractfoldermodel.h  abstractfoldermodel_p.h  basefiltermodel.cpp  basefiltermodel.h  basefiltermodel_p.h  basemodel.cpp  basemodel.h  basemodel_p.h  folderlistfiltermodel.cpp  folderlistfiltermodel.h  folderlistmodel.cpp  folderlistmodel.h  folderlistmodel_p.h
src/Storage/: abstractstorage.cpp  abstractstorage.h  abstractstorage_p.h  sqlitestorage.cpp  sqlitestorage.h  sqlitestorage_p.h
translations/: CMakeLists.txt  libfuoten.ts  libfuoten_da.ts  libfuoten_da.ts.license  libfuoten_de.ts  libfuoten_el.ts  libfuoten_el.ts.license  libfuoten_en_GB.ts  libfuoten_en_GB.ts.license  libfuoten_en_US.ts  libfuoten_fr.ts  libfuoten_fr.ts.license  libfuoten_it.ts  libfuoten_it.ts.license  libfuoten_nl.ts  libfuoten_nl.ts.license  libfuoten_sv.ts  libfuoten_sv.ts.license  libfuoten_zh_CN.ts  libfuoten_zh_CN.ts.license
