# SPDX-FileCopyrightText: (C) 2016-2022 Matthias Fehring <https://www.huessenbergnetz.de>
# SPDX-License-Identifier: LGPL-3.0-or-later

target_sources(FuotenQt${QT_VERSION_MAJOR}
    PRIVATE
        component.h
        component_p.h
        component.cpp
        converttoapppassword.h
        converttoapppassword_p.h
        converttoapppassword.cpp
        createfeed.h
        createfeed_p.h
        createfeed.cpp
        createfolder.h
        createfolder_p.h
        createfolder.cpp
        deleteapppassword.h
        deleteapppassword_p.h
        deleteapppassword.cpp
        deletefeed.h
        deletefeed_p.h
        deletefeed.cpp
        deletefolder.h
        deletefolder_p.h
        deletefolder.cpp
        getfeeds.h
        getfeeds_p.h
        getfeeds.cpp
        getfolders.h
        getfolders_p.h
        getfolders.cpp
        getitems.h
        getitems_p.h
        getitems.cpp
        getserverstatus.h
        getserverstatus_p.h
        getserverstatus.cpp
        getstatus.h
        getstatus_p.h
        getstatus.cpp
        getupdateditems.h
        getupdateditems_p.h
        getupdateditems.cpp
        getuser.h
        getuser_p.h
        getuser.cpp
        getversion.h
        getversion_p.h
        getversion.cpp
        getwipestatus.h
        getwipestatus_p.h
        getwipestatus.cpp
        loginflowv2.h
        loginflowv2_p.h
        loginflowv2.cpp
        markallitemsread.h
        markallitemsread_p.h
        markallitemsread.cpp
        markfeedread.h
        markfeedread_p.h
        markfeedread.cpp
        markfolderread.h
        markfolderread_p.h
        markfolderread.cpp
        markitem.h
        markitem_p.h
        markitem.cpp
        markmultipleitems.h
        markmultipleitems_p.h
        markmultipleitems.cpp
        movefeed.h
        movefeed_p.h
        movefeed.cpp
        postwipesuccess.h
        postwipesuccess_p.h
        postwipesuccess.cpp
        renamefeed.h
        renamefeed_p.h
        renamefeed.cpp
        renamefolder.h
        renamefolder_p.h
        renamefolder.cpp
        staritem.h
        staritem_p.h
        staritem.cpp
        starmultipleitems.h
        starmultipleitems_p.h
        starmultipleitems.cpp
)

set(API_PUBLIC_HEADER
    Component
    component.h
    ConvertToAppPassword
    converttoapppassword.h
    CreateFeed
    createfeed.h
    CreateFolder
    createfolder.h
    DeleteAppPassword
    deleteapppassword.h
    DeleteFeed
    deletefeed.h
    DeleteFolder
    deletefolder.h
    GetFeeds
    getfeeds.h
    GetFolders
    getfolders.h
    GetItems
    getitems.h
    GetServerStatus
    getserverstatus.h
    GetStatus
    getstatus.h
    GetUpdatedItems
    getupdateditems.h
    GetUser
    getuser.h
    GetVersion
    getversion.h
    GetWipeStatus
    getwipestatus.h
    LoginFlowV2
    loginflowv2.h
    MarkAllItemsRead
    markallitemsread.h
    MarkFeedRead
    markfeedread.h
    MarkFolderRead
    markfolderread.h
    MarkItem
    markitem.h
    MarkMultipleItems
    markmultipleitems.h
    MoveFeed
    movefeed.h
    PostWipeSuccess
    postwipesuccess.h
    RenameFeed
    renamefeed.h
    RenameFolder
    renamefolder.h
    StarItem
    staritem.h
    StarMultipleItems
    starmultipleitems.h
)

install(FILES ${API_PUBLIC_HEADER} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/fuoten-qt${QT_VERSION_MAJOR}/Fuoten/API COMPONENT development)
